--- a/style/style.css
+++ b/style/style.css
@@ -100,7 +100,7 @@ select {
 }
 
 input[type="number"] {
-    -moz-appearance: textfield;
+    -moz-appea: textfield;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
